--- a/index.html
+++ b/index.html
@@ -66,31 +66,57 @@
 				</div>
 				<div class="moments">
 					<div class="moments__container _container">
-						<h2 class="list__title">Любые варианты появления</h2>
+						<h2 class="list__title">Планеты</h2>
 						<div class="moments__items">
 							<div class="moments__item _anim-items">
 								<div class="moments__image">
 									<img src="img/01merkury.jpg" alt="">
 								</div>
-								<div class="moments__text">Lorem ipsum dolor sit amet.</div>
+								<div class="moments__text">Меркурий</div>
 							</div>
 							<div class="moments__item _anim-items">
 								<div class="moments__image">
 									<img src="img/02venera.jpg" alt="">
 								</div>
-								<div class="moments__text">Lorem ipsum dolor sit amet.</div>
+								<div class="moments__text">Венера</div>
 							</div>
 							<div class="moments__item _anim-items">
 								<div class="moments__image">
 									<img src="img/03zemlya.jpg" alt="">
 								</div>
-								<div class="moments__text">Lorem ipsum dolor sit amet.</div>
+								<div class="moments__text">Земля</div>
 							</div>
 							<div class="moments__item _anim-items">
 								<div class="moments__image">
 									<img src="img/04mars.jpg" alt="">
 								</div>
-								<div class="moments__text">Lorem ipsum dolor sit amet.</div>
+								<div class="moments__text">Марс</div>
+							</div>
+						</div>
+						<div class="moments__items">
+							<div class="moments__item _anim-items">
+								<div class="moments__image">
+									<img src="img/05ypiter.jpg" alt="">
+								</div>
+								<div class="moments__text">Юпитер</div>
+							</div>
+							<div class="moments__item _anim-items">
+								<div class="moments__image">
+									<img src="img/06saturn.jpg" alt="">
+								</div>
+								<div class="moments__text">Сатурн</div>
+							</div>
+							<div class="moments__item _anim-items">
+								<div class="moments__image">
+									<img src="img/07uran.jpg" alt="">
+								</div>
+								<div class="moments__text">Уран</div>
+							</div>
+							<div class="moments__item _anim-items">
+								<div class="moments__image">
+									<img src="img/08neptun.jpg" alt="">
+								</div>
+								<div class="moments__text">Нептун</div>
 							</div>
 						</div>
 					</div>
