--- a/index.html
+++ b/index.html
@@ -33,33 +33,41 @@
 			<div class="page">
 				<div class="text">
 					<div class="text__container _container">
-						<h2 class="text__title">Анимация текста при скролле</h2>
+						<h2 class="text__title">Солнечная система</h2>
 						<div class="text__item _anim-items">
 							<p class="_anim-show">
-								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique velit amet nam rerum voluptas, tempora deserunt vero dolorem in, itaque possimus maxime ad inventore ipsa iure tenetur odio. Error, in!
-								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique velit amet nam rerum voluptas, tempora deserunt vero dolorem in, itaque possimus maxime ad inventore ipsa iure tenetur odio. Error, in!
-								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique velit amet nam rerum voluptas, tempora deserunt vero dolorem in, itaque possimus maxime ad inventore ipsa iure tenetur odio. Error, in!
+								Со́лнечная систе́ма — планетная система, включает в себя центральную звезду — Солнце — и все естественные космические
+								объекты, вращающиеся вокруг Солнца. Она сформировалась путём гравитационного сжатия газопылевого облака примерно 4,57
+								млрд лет назад.
 							</p>
 						</div>
 						<div class="text__item _anim-items">
 							<p class="_anim-show">
-								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique velit amet nam rerum voluptas, tempora deserunt vero dolorem in, itaque possimus maxime ad inventore ipsa iure tenetur odio. Error, in!
-								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique velit amet nam rerum voluptas, tempora deserunt vero dolorem in, itaque possimus maxime ad inventore ipsa iure tenetur odio. Error, in!
-								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique velit amet nam rerum voluptas, tempora deserunt vero dolorem in, itaque possimus maxime ad inventore ipsa iure tenetur odio. Error, in!
+								Общая масса Солнечной системы составляет около 1,0014 M☉. Бо́льшая часть её приходится на Солнце; оставшаяся часть
+								практически полностью содержится в восьми отдалённых друг от друга планетах, имеющих близкие к круговым орбиты, лежащие
+								почти в одной плоскости — плоскости эклиптики.
 							</p>
 						</div>
 						<div class="text__item _anim-items">
 							<p class="_anim-show">
-								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique velit amet nam rerum voluptas, tempora deserunt vero dolorem in, itaque possimus maxime ad inventore ipsa iure tenetur odio. Error, in!
-								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique velit amet nam rerum voluptas, tempora deserunt vero dolorem in, itaque possimus maxime ad inventore ipsa iure tenetur odio. Error, in!
-								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique velit amet nam rerum voluptas, tempora deserunt vero dolorem in, itaque possimus maxime ad inventore ipsa iure tenetur odio. Error, in!
+								Из-за этого наблюдается противоречащее ожидаемому распределение момента импульса между Солнцем и планетами (так
+								называемая «проблема моментов»): всего 2 % общего момента системы приходится на долю Солнца, масса которого в ~740 раз
+								больше общей массы планет, а остальные 98 % — на ~0,001 общей массы Солнечной системы.
 							</p>
 						</div>
 						<div class="text__item _anim-items">
 							<p class="_anim-show">
-								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique velit amet nam rerum voluptas, tempora deserunt vero dolorem in, itaque possimus maxime ad inventore ipsa iure tenetur odio. Error, in!
-								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique velit amet nam rerum voluptas, tempora deserunt vero dolorem in, itaque possimus maxime ad inventore ipsa iure tenetur odio. Error, in!
-								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique velit amet nam rerum voluptas, tempora deserunt vero dolorem in, itaque possimus maxime ad inventore ipsa iure tenetur odio. Error, in!
+								В Солнечной системе существуют две области, заполненные малыми телами. Пояс астероидов, находящийся между Марсом и
+								Юпитером, схож по составу с планетами земной группы, поскольку состоит из силикатов и металлов. Крупнейшими объектами
+								пояса астероидов являются карликовая планета Церера и астероиды Паллада, Веста и Гигея.
+							</p>
+						</div>	
+						<div class="text__item _anim-items">
+							<p class="_anim-show">
+								За орбитой Нептуна располагаются транснептуновые объекты, состоящие из замёрзшей воды, аммиака и метана, крупнейшими из
+								которых являются Плутон, Седна, Хаумеа, Макемаке, Квавар, Орк и Эрида. В Солнечной системе существуют и другие популяции
+								малых тел, такие как планетные квазиспутники и троянцы, околоземные астероиды, кентавры, дамоклоиды, а также
+								перемещающиеся по системе кометы, метеороиды и космическая пыль.
 							</p>
 						</div>
 					</div>
@@ -69,9 +77,9 @@
 						<h2 class="list__title">Планеты</h2>
 						<div class="moments__items">
 							<div class="moments__item _anim-items">
-								<div class="moments__image">
+								<a href="" class="moments__image">
 									<img src="img/01merkury.jpg" alt="">
-								</div>
+								</a>
 								<div class="moments__text">Меркурий</div>
 							</div>
 							<div class="moments__item _anim-items">
@@ -123,19 +131,91 @@
 				</div>
 				<div class="list">
 					<div class="list__container _container">
-						<h2 class="list__title">Поочередное появление</h2>
+						<h2 class="list__title">Подробнее о планетах</h2>
 						<ul class="list__items">
 							<ul class="list__item _anim-items">
-								<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nihil ratione dicta alias inventore exercitationem officiis quae fugiat ea dolorum nulla excepturi nostrum eligendi error nobis, quam perferendis ipsa quaerat?</li>
-								<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nihil ratione dicta alias inventore exercitationem officiis quae fugiat ea dolorum nulla excepturi nostrum eligendi error nobis, quam perferendis ipsa quaerat?</li>
-								<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nihil ratione dicta alias inventore exercitationem officiis quae fugiat ea dolorum nulla excepturi nostrum eligendi error nobis, quam perferendis ipsa quaerat?</li>
-								<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nihil ratione dicta alias inventore exercitationem officiis quae fugiat ea dolorum nulla excepturi nostrum eligendi error nobis, quam perferendis ipsa quaerat?</li>
-								<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nihil ratione dicta alias inventore exercitationem officiis quae fugiat ea dolorum nulla excepturi nostrum eligendi error nobis, quam perferendis ipsa quaerat?</li>
+								<li>Меркурий является ближайшей планетой к Солнцу и наименьшей планетой системы (0,055 массы Земли). У планеты нет спутников....</li>
+								<li>Венера близка по размеру к Земле и, как и Земля, имеет толстую силикатную оболочку вокруг железного ядра и aтмосферу (из...</li>
+								<li>Земля является крупнейшей и самой плотной из планет земной группы. У Земли наблюдается тектоника плит. Вопрос о наличии	...</li>
+								<li>Марс меньше Земли и Венеры. Он обладает атмосферой, состоящей главным образом из углекислого газа, с поверхностным давле...</li>
+								<li>Юпитер обладает массой в 318 раз больше земной, и в 2,5 раза массивнее всех остальных планет, вместе взятых. Он состоит	...</li>
+								<li>Сатурн, известный своей обширной системой колец, имеет несколько схожие с Юпитером структуру атмосферы и магнитосферы. Х...</li>
+								<li>Уран имеет массу в 14 раз больше, чем Земля, являясь самым лёгким среди планет-гигантов. Уникальным среди других планет	...</li>
+								<li>Нептун, хотя и немного меньше Урана, более массивен (17 масс Земли) и поэтому более плотный. Он излучает больше	внутренн...</li>
 							</ul>
 						</ul>
 					</div>
 				</div>
 			</div>
+			<footer class="footer">
+				<div class="footer__top">
+					<div class="footer__main _container">
+						<div class="footer__row">
+							<div class="footer__column">
+								<div class="footer__label">Company Info</div>
+								<nav class="footer__menu menu-footer">
+									<ul class="menu-footer__list">
+										<li class="menu-footer__item"><a href="" class="menu-footer__link">About Us</a></li>
+									</ul>
+								</nav>
+							</div>
+							<div class="footer__column">
+								<div class="footer__label">Legal</div>
+								<nav class="footer__menu menu-footer">
+									<ul class="menu-footer__list">
+										<li class="menu-footer__item"><a href="" class="menu-footer__link">About Us</a></li>
+									</ul>
+								</nav>
+							</div>
+							<div class="footer__column">
+								<div class="footer__label">Features</div>
+								<nav class="footer__menu menu-footer">
+									<ul class="menu-footer__list">
+										<li class="menu-footer__item"><a href="" class="menu-footer__link">About Us</a></li>
+									</ul>
+								</nav>
+							</div>
+							<div class="footer__column">
+								<div class="footer__label">Источник</div>
+								<nav class="footer__menu menu-footer">
+									<ul class="menu-footer__list">
+										<li class="menu-footer__item"><a href="https://ru.wikipedia.org/wiki/Солнечная_система" class="menu-footer__link">Википедия</a></li>
+									</ul>
+								</nav>
+							</div>
+							<div class="footer__column">
+								<div class="footer__label">Контакты</div>
+								<div class="footer__contacts contacts-footer">
+									<a href="tel:89965120000"
+										class="contacts-footer__item contacts-footer__item_phone">(996)512 00-00</a>
+									<a href="" class="contacts-footer__item contacts-footer__item_map">162134 Sokol test test test test</a>
+									<a href="mailto:olegdlz@mail.ru"
+										class="contacts-footer__item contacts-footer__item_email">olegdlz@mail.ru</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="footer__bottom">
+					<div class="footer__container _container">
+						<div class="footer__copy">by aom 2021 </div>
+						<div class="footer__social social">
+							<a href="" class="social__item">
+								<img src="img/footer/social/01.svg" alt="social">
+							</a>
+							<a href="" class="social__item">
+								<img src="img/footer/social/02.svg" alt="social">
+							</a>
+							<a href="" class="social__item">
+								<img src="img/footer/social/03.svg" alt="social">
+							</a>
+							<a href="" class="social__item">
+								<img src="img/footer/social/04.svg" alt="social">
+							</a>
+						</div>
+					</div>
+				</div>
+			</footer>
 		</div>
 		<script src="js/script.js"></script>
 	</body>
